# switchgear

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md
ci/: Dockerfile
components/: Cargo.toml
components/src/: lib.rs
components/src/discovery/: db.rs  error.rs  http.rs  memory.rs  mod.rs
components/src/offer/: db.rs  error.rs  http.rs  memory.rs  mod.rs  provider.rs
components/src/offer/db_orm/: offer_metadata_table.rs  prelude.rs
components/src/pool/: client_pool.rs  error.rs  mod.rs
components/src/pool/cln/grpc/: client.rs
components/src/pool/lnd/grpc/: client.rs
components/tests/common/: discovery.rs  mock_service.rs  mod.rs  offer.rs
components/tests/discovery/: db_mysql.rs  db_postgres.rs  db_sqlite.rs  http.rs  main.rs  memory.rs
components/tests/ln/: cln.rs  lnd.rs  main.rs
components/tests/offer/: db_mysql.rs  db_postgres.rs  db_sqlite.rs  http.rs  memory.rs
doc/: discovery-service-openapi.yaml  get_invoice_loop.puml  lnurl-service-openapi.yaml  offer-service-openapi.yaml  pingora_traits_component_diagram.puml  sequence.puml  sequence_direct_connection.puml  sequence_invoice_failure.puml  sequence_payment_failure.puml  sequence_success.puml  service_components_traits_diagram.puml  service_discovery_traits_diagram.puml  (+2 more)
hooks/: build
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250724_182058_create_table.rs  main.rs
pingora/: Cargo.toml
pingora/src/: backoff.rs  balance.rs  discovery.rs  error.rs  health.rs  lib.rs  pool.rs  socket.rs
server/: Cargo.toml  build-image-cargo-config.toml
server/config/: discovery-standalone.yaml  lnurl-standalone.yaml  memory-basic-no-tls.yaml  memory-basic.yaml  mixed-persistence.yaml  offers-standalone.yaml  persistence-secrets.env  persistence-with-secrets.yaml  persistence.yaml  sqlite-persistent.yaml
server/src/: config.rs  main.rs  signals.rs
server/src/commands/: mod.rs  services.rs  token.rs
server/src/commands/discovery/: backend.rs  mod.rs  token.rs
server/src/commands/offer/: metadata.rs  mod.rs  record.rs  token.rs
server/src/di/: delegates.rs  macros.rs  mod.rs
server/src/di/inject/injectors/: balance.rs  config.rs  mod.rs
server/src/di/inject/injectors/service/: balance.rs  balance_background.rs  discovery.rs  mod.rs  offer.rs  tls.rs
server/src/di/inject/injectors/store/: discovery.rs  mod.rs  offer.rs  tls.rs
server/tests/features/: backend-create-delete.feature  backend-enable-disable.feature  backend_create_delete.rs  backend_enable_disable.rs  cli-discovery-manage.feature  cli-offer-manage.feature  cli-token.feature  cli_discovery_manage.rs  cli_offer_manage.rs  cli_token.rs  discovery-manage.feature  discovery_manage.rs  feature-test-config.toml  http-remote-stores.feature  http_remote_stores.rs  invalid-configuration-rejection.feature  invalid_configuration_rejection.rs  lnurl-pay-invoice-generation.feature  lnurl-pay-multi-backend-invoice-generation.feature  lnurl_pay_invoice_generation.rs  lnurl_pay_multi_backend_invoice_generation.rs  main.rs  offer-manage.feature  offer_manage.rs  secrets.feature  secrets.rs  server-lifecycle-with-graceful-shutdown.feature  server-persistence.feature  server_lifecycle_with_graceful_shutdown.rs  server_persistence.rs  service-enablement.feature  service-logs.feature  service_enablement.rs  service_logs.rs
server/tests/features/common/: client.rs  helpers.rs  mod.rs  step_functions.rs
server/tests/features/common/config/: invalid-config.yaml
server/tests/features/common/context/: certs.rs  cli.rs  global.rs  mod.rs  pay.rs  server.rs  token.rs
service/: Cargo.toml  build.rs
service-api/: Cargo.toml
service-api/src/: balance.rs  discovery.rs  lnurl.rs  offer.rs  service.rs
service/src/: lib.rs
service/src/api/: balance.rs  discovery.rs  lnurl.rs  mod.rs  offer.rs
service/src/axum/: header.rs  middleware.rs  mod.rs  partitions.rs
service/src/axum/crud/: error.rs  response.rs
service/src/axum/extract/: address.rs  host.rs  mod.rs  scheme.rs  socket.rs  uuid.rs
service/src/components/: mod.rs
service/src/components/axum/middleware/: logger.rs
service/src/components/discovery/: db.rs  error.rs  file.rs  http.rs  memory.rs  mod.rs
service/src/components/offer/: db.rs  error.rs  http.rs  memory.rs
service/src/components/offer/db_orm/: mod.rs  offer_record_table.rs
service/src/components/pool/: default_pool.rs  error.rs  mod.rs
service/src/components/pool/cln/grpc/: client.rs  config.rs  mod.rs  tonic_client.rs
service/src/components/pool/lnd/grpc/: client.rs  config.rs  tonic_client.rs
service/src/discovery/: auth.rs  handler.rs  service.rs  state.rs
service/src/lnurl/: mod.rs  service.rs
service/src/lnurl/pay/: error.rs  handler.rs  state.rs
service/src/offer/: auth.rs  handler.rs  mod.rs  service.rs  state.rs
service/src/testing/: error.rs  mod.rs
service/src/testing/discovery/: store.rs
service/src/testing/offer/: store.rs
service/tests/common/: db.rs  discovery.rs  mod.rs  offer.rs  service.rs
service/tests/discovery/: db_mysql.rs  db_postgres.rs  db_sqlite.rs  file.rs  http.rs  main.rs  memory.rs
service/tests/ln/: cln.rs  cln_tonic.rs  lnd.rs  lnd_tonic.rs  main.rs
service/tests/offer/: db_mysql.rs  db_postgres.rs  db_sqlite.rs  http.rs  memory.rs
switchgear/: Cargo.toml  README.md
testing/: .env  Cargo-empty.toml  Cargo.toml  README.md  docker-compose.yml  nginx-credentials-server.conf  testing.env  wait-credentials.sh
testing/cln/: Dockerfile  init-tls.sh
testing/credentials-server/: Dockerfile
testing/lnd/: Dockerfile  init-tls.sh
testing/mysql/: Dockerfile  init-tls.sh
testing/postgres/: Dockerfile  init-tls.sh
testing/setup/: Dockerfile  bitcoin.sh  credentials.sh  init.sh  ln.sh
testing/src/: credentials.rs  db.rs  lib.rs  ports.rs  services.rs
testing/src/credentials/: db.rs  lightning.rs  mod.rs
testing/src/mock-credentials/cln/: address.txt  ca.pem  client-key.pem  client.pem  node_id
testing/src/mock-credentials/lnd/: address.txt  admin.macaroon  node_id  tls.cert
(+10 files in other folders)
