[workspace]
members = [
    "server",
    "service",
    "pingora",
    "testing",
    "migration",
    "switchgear"
]

resolver = "2"

[workspace.package]
version = "0.1.20"

[workspace.dependencies]
switchgear-pingora = { version = "0.1.20", path = "pingora" }
switchgear-service = { version = "0.1.20", path = "service" }
switchgear-migration = { version = "0.1.20", path = "migration" }
switchgear-testing = { version = "0.1.20", path = "testing" }


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true


[patch.crates-io]
sqlx = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-core ={ git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-macros = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs"  }
sqlx-macros-core = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs"  }
sqlx-mysql = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs"  }
sqlx-postgres = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs"  }
sqlx-sqlite = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs"  }
