[workspace]
members = [
    "components",
    "migration",
    "pingora",
    "server",
    "service",
    "service-api",
    "switchgear",
    "testing"
]

resolver = "2"

[workspace.package]
version = "0.1.26"

[workspace.dependencies]
switchgear-components = { version = "0.1.26", path = "components" }
switchgear-migration = { version = "0.1.26", path = "migration" }
switchgear-pingora = { version = "0.1.26", path = "pingora" }
switchgear-service = { version = "0.1.26", path = "service" }
switchgear-service-api = { version = "0.1.26", path = "service-api" }
switchgear-testing = { version = "0.1.26", path = "testing" }

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true


[patch.crates-io]
sqlx = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-core = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-macros = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-macros-core = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-mysql = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-postgres = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
sqlx-sqlite = { git = "https://github.com/bitshock-src/sqlx.git", tag = "rustls-native-certs-aws-lc-rs" }
