[package]
name = "switchgear-migration"
version = "0.1.10"
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Database migrations for Switchgear LNURL load balancer"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "database", "migration", "sea-orm"]
categories = ["database", "web-programming"]
publish = true

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
   "runtime-tokio-rustls",
   "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"
]
