[package]
name = "switchgear-pingora"
version = "0.1.8"
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Pingora-based load balancer implementation for Switchgear LNURL payment infrastructure"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "pingora", "load-balancer"]
categories = ["network-programming", "web-programming"]
publish = true

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.88"
axum = {  version = "0.8.4", features = ["macros"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4.41", features = ["serde"] }
switchgear-service = { version = "0.1.7", path = "../service" }
log = "0.4"
pingora-core = { version = "0.5.0", features = ["boringssl"] }
pingora-error = { version = "0.5.0" }
pingora-load-balancing = { version = "0.5.0" }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
url = "2.5.4"

[dev-dependencies]
chrono = "0.4.41"
secp256k1 = { version = "0.29.1", features = ["recovery", "serde", "rand"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.17.0"
