[package]
name = "switchgear-pingora"
version = "0.1.13"
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Pingora-based load balancer implementation for Switchgear LNURL payment infrastructure"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "pingora", "load-balancer"]
categories = ["network-programming", "web-programming"]
publish = true

[dependencies]
arc-swap = "1.7"
async-trait = "0.1"
axum = {  version = "0.8", features = ["macros"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
switchgear-service = { version = "0.1.7", path = "../service" }
log = "0.4"
pingora-core = { version = "0.6", features = ["rustls"] }
pingora-error = { version = "0.6" }
pingora-load-balancing = { version = "0.6" }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
url = "2.5"

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = "1.17"
