[package]
name = "switchgear-pingora"
version.workspace = true
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Pingora-based load balancer implementation for Switchgear LNURL payment infrastructure"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "pingora", "load-balancer"]
categories = ["network-programming", "web-programming"]
publish = true

[dependencies]
arc-swap = "1"
async-trait = "0.1"
axum = {  version = "0.8", features = ["macros"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pingora-core = { version = "0.6", default-features = false }
pingora-error = { version = "0.6", default-features = false }
pingora-load-balancing = { version = "0.6", default-features = false }
switchgear-service-api.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
chrono = "0.4"
rand = "0.8"
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
tokio = { version = "1", features = ["full"] }
uuid = "1"
