[package]
name = "switchgear-server"
version.workspace = true
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "High availability LNURL load balancer server for enterprise Bitcoin Lightning payment providers"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "load-balancer", "payments"]
categories = ["command-line-utilities", "network-programming", "web-programming"]
publish = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum-server = { version = "0.7", default-features = false, features = ["tokio-rustls", "tls-rustls"] }
backoff = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
futures-util = "0.3"
jemallocator = "0.5"
jsonwebtoken = "10"
log = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
pingora-load-balancing = { version = "0.6", default-features = false }
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.10"
serde_json = "1"
shellexpand = "3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
simplelog = {version = "0.12", features = ["paris"] }
strfmt = "0.2"
switchgear-components.workspace = true
switchgear-pingora.workspace = true
switchgear-service-api.workspace = true
switchgear-service.workspace = true
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
jemallocator = "0.5"
lightning-invoice = { version = "0.34", features = ["serde", "std"] }
rand = "0.8"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots-no-provider"] }
serde-saphyr = "0.0.10"
switchgear-testing.workspace = true
sysinfo = "0.37"
tempfile = "3"
toml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

[lib]
name = "switchgear_server"
path = "src/lib.rs"

[[bin]]
name = "swgr"
path = "src/main.rs"

