[package]
name = "switchgear-service-api"
version.workspace = true
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Service layer API for Switchgear LNURL load balancer"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "api", "service"]
categories = ["network-programming", "web-programming", "cryptography::cryptocurrencies"]
publish = true

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
email_address = "0.2"
hex = "0.4"
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
bitcoin_hashes = "0.14"
lightning-invoice = { version = "0.34", features = ["serde", "std"] }
secp256k1_0_29 = { package = "secp256k1", version = "0.29", features = ["recovery", "serde"] }
