[package]
name = "switchgear-service"
version = "0.1.2"
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Service layer and API implementations for Switchgear LNURL load balancer"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "api", "service"]
categories = ["network-programming", "web-programming", "cryptography::cryptocurrencies"]
publish = true

[dependencies]
#bitcoin = { version = "0.32.2", default-features = false, features = ["secp-recovery", "serde"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-forwarded-header = "0.1.0"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22.1"
bech32 = "0.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
client-ip = { version = "0.1.1", features = ["forwarded-header"] }
email_address = "0.2.9"
fs4 = { version = "0.13.1", features = ["tokio"] }
hex = "0.4"
http = "1.3.1"
hyper-rustls = { version = "0.27.7", features = ["http2", "tls12"], default-features = false }
hyper-util = "0.1"
image = "0.25.6"
jsonwebtoken = "9.3.1"
lightning-invoice = { version = "0.33.2", features = ["serde", "std"] }
log = "0.4"
prost = {  version = "0.14.1" }
qrcode = "0.14.1"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
sea-orm = { version = "1.1.14", features = ["sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
secp256k1 = { version = "0.29.1", features = ["recovery", "serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "tls-rustls", "sqlite", "macros", "migrate"] }
strfmt = "0.2.5"
switchgear-migration = { version = "0.1.0", path = "../migration" }
tempfile = "3.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tonic = {  version = "0.14.2", features = ["transport", "tls-ring"] }
tonic-prost = "0.14.2"
tower = { version = "0.5.2", features = ["balance"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-prost-build = {  version = "0.14.2" }

[dev-dependencies]
anyhow = "1.0"
axum-test = "17.3.0"
switchgear-testing = { git = "https://github.com/bitshock-src/switchgear.git", branch = "main" }
p256 = { version = "0.13", features = ["ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8.5"
rqrr = "0.7.1"
hyper-util = "0.1"
