[package]
name = "switchgear-service"
version.workspace = true
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Service layer and API implementations for Switchgear LNURL load balancer"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "api", "service"]
categories = ["network-programming", "web-programming", "cryptography::cryptocurrencies"]
publish = true

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
bech32 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
client-ip = { version = "0.1", features = ["forwarded-header"] }
email_address = "0.2"
hex = "0.4"
http = "1.4"
hyper-rustls = { version = "0.27", features = ["http2", "tls12", "native-tokio"], default-features = false }
hyper-timeout = "0.5"
hyper-util = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
log = "0.4"
prost = {  version = "0.14" }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots-no-provider"] }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.2"
sea-orm = { version = "1.1", default-features = false, features = ["with-chrono", "with-uuid", "with-json"] }
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "postgres", "mysql"] }
switchgear-migration.workspace = true
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tonic = {  version = "0.14", default-features = false, features = ["codegen", "transport", "tls-native-roots"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["balance"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[build-dependencies]
tonic-prost-build = {  version = "0.14" }

[dev-dependencies]
anyhow = "1.0"
axum-test = "18.3"
bitcoin_hashes = "0.14"
hyper-util = "0.1"
lightning-invoice = { version = "0.33", features = ["serde", "std"] }
p256 = { version = "0.13", features = ["ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
png = "0.18"
rand = "0.8"
rqrr = "0.10"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
secp256k1_0_29 = { package = "secp256k1", version = "0.29", features = ["recovery", "serde"] }
switchgear-testing.workspace = true
