[package]
name = "switchgear-service"
version.workspace = true
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "Service layer implementations for Switchgear LNURL load balancer"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "lnurl", "api", "service"]
categories = ["network-programming", "web-programming", "cryptography::cryptocurrencies"]
publish = true

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
bech32 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
log = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "postgres", "mysql"] }
switchgear-components.workspace = true
switchgear-service-api.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["balance"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "18"
p256 = { version = "0.13", features = ["ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
png = "0.18"
rand = "0.8"
rqrr = "0.10"
