[package]
name = "switchgear-testing"
version = "0.1.9"
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "CI Integration Testing Framework for Switchgear"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
publish = true

[dependencies]
anyhow = "1.0"
dotenvy = "0.15.7"
fs4 = { version ="0.13.1" }
hex = "0.4"
indexmap = "2.10.0"
secp256k1 = { version = "0.29.1", features = ["recovery", "serde"] }
tempfile = "3.23.0"
ureq = "3.1.2"
tar = "0.4.44"
flate2 = "1.1.4"