[package]
name = "switchgear-testing"
version = "0.1.15"
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "CI Integration Testing Framework for Switchgear"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
publish = true

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
flate2 = "1.1"
fs4 = { version ="0.13" }
hex = "0.4"
indexmap = "2.12"
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
tar = "0.4"
tempfile = "3.23"
ureq = { version = "3.1", default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-no-provider-native-roots", "sqlite", "postgres", "mysql"] }
