[package]
name = "switchgear-testing"
version.workspace = true
edition = "2021"
authors = ["Bitshock <info@bitshock.com>"]
description = "CI Integration Testing Framework for Switchgear"
documentation = "https://github.com/bitshock-src/switchgear"
homepage = "https://bitshock.com"
repository = "https://github.com/bitshock-src/switchgear"
license = "Apache-2.0"
publish = true

[dependencies]
anyhow = "1"
dotenvy = "0.15"
flate2 = "1"
fs4 = { version ="0.13" }
hex = "0.4"
indexmap = "2"
secp256k1 = { version = "0.31", features = ["recovery", "serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "postgres", "mysql"] }
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
ureq = { version = "3", default-features = false }
